# llmevalkit

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples/: all_15_metrics.py  all_36_metrics.py  all_46_metrics.py  all_61_metrics.py  all_78_metrics.py
llmevalkit/: __init__.py  cli.py  evaluator.py  llm_client.py  models.py  prompts.py
llmevalkit/anomaly/: __init__.py
llmevalkit/compliance/: __init__.py  custom_rule.py  dpdp.py  eu_ai_act.py  gdpr.py  hipaa.py  pii.py
llmevalkit/conversation/: __init__.py
llmevalkit/detection/: __init__.py  enhanced.py
llmevalkit/doceval/: __init__.py  extraction_consistency.py  field_accuracy.py  field_completeness.py  field_hallucination.py  format_validation.py  table_extraction.py
llmevalkit/governance/: __init__.py  frameworks.py
llmevalkit/groundtruth/: __init__.py
llmevalkit/hallucination/: __init__.py  advanced_detectors.py  core_detectors.py  entity_hallucination.py  extended_detectors.py  numeric_hallucination.py
llmevalkit/metrics/: README.md  __init__.py  answer_relevance.py  base.py  coherence.py  completeness.py  context_relevance.py  faithfulness.py  geval.py  hallucination.py  math_metrics.py  toxicity.py
llmevalkit/multimodal/: __init__.py  additional_metrics.py  metrics.py
llmevalkit/observe/: __init__.py
llmevalkit/redteam/: __init__.py
llmevalkit/security/: __init__.py  bias_detector.py  prompt_injection.py
llmevalkit/utils/: __init__.py  token_counter.py
notebooks/: llmevalkit_demo.ipynb  llmevalkit_v2_demo.ipynb  llmevalkit_v3_demo.ipynb  llmevalkit_v4_demo.ipynb  llmevalkit_v4_universal_demo.ipynb  llmevalkit_v6_demo.ipynb
tests/: test_compliance.py  test_llmeval.py  test_v3.py  test_v4.py  test_v5.py  test_v6.py
