[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmevalkit"
version = "4.0.0"
description = "LLM evaluation, compliance, document parsing, governance, security, hallucination detection, and multimodal testing. 46 metrics. Works with or without API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Venkatkumar Rajan", email = "venkatkumarr.vk99@gmail.com"}
]
keywords = [
    "llm", "evaluation", "rag", "nlp", "generative-ai",
    "faithfulness", "hallucination", "relevance", "metrics",
    "compliance", "pii", "hipaa", "gdpr", "dpdp", "eu-ai-act",
    "testing", "responsible-ai", "document-parsing", "ocr", "prompt-injection", "bias-detection", "nist", "cosai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
azure = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
huggingface = ["transformers>=4.30.0", "torch>=2.0.0", "sentence-transformers>=2.2.0"]
nlp = ["spacy>=3.5.0"]
doceval = ["thefuzz>=0.20.0"]
all = ["anthropic>=0.30.0", "transformers>=4.30.0", "torch>=2.0.0", "sentence-transformers>=2.2.0", "spacy>=3.5.0", "thefuzz>=0.20.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0", "black>=23.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://pypi.org/project/llmevalkit/"
Documentation = "https://github.com/VK-Ant/llmevalkit#readme"
Repository = "https://github.com/VK-Ant/llmevalkit"
Issues = "https://github.com/VK-Ant/llmevalkit/issues"
PyPI = "https://pypi.org/project/llmevalkit/"
Portfolio = "https://vk-ant.github.io/Venkatkumar/"

[project.scripts]
llmevalkit = "llmevalkit.cli:main"

[tool.setuptools.packages.find]
include = ["llmevalkit*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
